<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <Spinner
            android:id="@+id/spOrderStatus"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/spinner_background"
            android:paddingBottom="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_id_hint"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/etOrderId"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="orderNumber"
                android:enabled="false"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_date_hint"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/etOrderDate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints="date"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_hint"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/master_time_hint"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/etMasterTime"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/address_hint"
                android:paddingTop="8dp">

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:autofillHints="postalAddress"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btnOpenMap"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/open_map_description"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_map" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tel_hint"
                android:paddingTop="8dp">

                <EditText
                    android:id="@+id/etTel"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:autofillHints="phone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btnCall"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/call_description"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_phone" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surplus_hint"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/etSurplus"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_hint"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service_fee"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/etServiceFee"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parts_fee"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/etPartsFee"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEdit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/edit_button_text"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/cancel_button_text"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
