<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_background"
    tools:context=".activity.report.ReportActivity" >

    <Button
        android:id="@+id/btnBack"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/navigate_color"
        android:text="@string/navigation_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnBack"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnExport"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/export_color"
            android:text="@string/export_button_text"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnImport"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/import_color"
            android:text="@string/import_button_text"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>
